--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^10.12.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
